2001-02-26  Benjamin Kosnik  <bkoz@redhat.com>

	libstdc++/1972
	libstdc++/2089
	* include/bits/std_stdexcept.h (logic_error::logic_error): Use
	string object, not reference.
	(runtime_error::runtime_error): Same.
	* testsuite/19_diagnostics/stdexceptions.cc: New file.

2001-02-26  Phil Edwards  <pme@sources.redhat.com>

	* acinclude.m4 (GLIBCPP_CONFIGURE):  Update required compiler version.
	  (GLIBCPP_CHECK_COMPILER_FEATURES):  Can safely assume new
	  diagnostics.  Remove WFMT_FLAGS.
	* configure.in:  Replace WFMT_FLAGS with diagnostics options.
	* libsupc++/Makefile.am:  Likewise.
	* src/Makefile.am:  Likewise.
	* aclocal.m4:  Regenerated.
	* configure:  Regenerated.
	* Makefile.in:  Regenerated.
	* libio/Makefile.in:  Regenerated.
	* libmath/Makefile.in:  Regenerated.
	* libsupc++/Makefile.in:  Regenerated.
	* src/Makefile.in:  Regenerated.

2001-02-26  Phil Edwards  <pme@sources.redhat.com>

	Fixes libstdc++/2079
	* include/backward/iomanip.h:  Expose <ios> manipulators to global
	  namespace.
	* include/backward/iostream.h:  Also expose std::ws.

2001-02-25  Greg Freemyer <freemyer@NorcrossGroup.com>

	* libmath/mathconf.h (GET_LDOUBLE_MSW64): Fix thinko.

2001-02-23  Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/codecvt.h: Use __builtin_alloca.
	* include/bits/ostream.tcc: Same.
	* include/bits/fstream.tcc: Same.

2001-02-23  Alexandre Oliva <aoliva@redhat.com>

	* mknumeric_limits (CC): Use VAR=${VAR=...} form.

2001-02-23  David Edelsohn <dje@watson.ibm.com>

	* mknumeric_limits (CC): Use $BUILD_DIR/../../gcc/xgcc

2001-02-23  Phil Edwards  <pme@sources.redhat.com>

	c++/2052
	* include/backward/iostream.h:  Expose std::flush in old headers.

2001-02-23  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

	* mknumeric_limits: Remove special-casing on target.  Use gcc
	instead of g++ to build gen-num-limits.cc

2001-02-22  Benjamin Kosnik  <bkoz@redhat.com>

	* tests_flags.in (CXXFLAGS): Add -rpath to gcc build dir.
