@@ -38,7 +38,7 @@ void test01()
   // 2
   // std::logic_error obj((std::string)strlit);
 
-  VERIFY( strcmp(obj.what(), s.data()) );
+  VERIFY( strcmp(obj.what(), s.data()) == 0 );
 }
 
 void test02()
@@ -47,7 +47,7 @@ void test02()
   std::string s("lack of sunlight error");
   std::domain_error x(s);
   
-  VERIFY( strcmp(x.what(), s.data())  );
+  VERIFY( strcmp(x.what(), s.data()) == 0 );
 }
 
 // libstdc++/2089
@@ -64,7 +64,7 @@ void test03()
   try
     { throw fuzzy_logic(); }
   catch(const fuzzy_logic& obj)
-    { VERIFY( strcmp("whoa", obj.what()) ); }
+    { VERIFY( strcmp("whoa", obj.what()) == 0 ); }
   catch(...)
     { VERIFY( false ); }
 }
